# liba2

./: Cargo.toml  mise.toml
src/: lib.rs  protocol.rs
src/audio/: buffer.rs  cipher.rs  encoder.rs  live_decoder.rs  mod.rs  resampler.rs  rtp.rs  sender_thread.rs  streamer.rs
src/audio/rtp/: packet.rs  receiver.rs  retransmit.rs  sender.rs  socket.rs
src/client/: api.rs  builder.rs  connection.rs  control.rs  group.rs  handshake.rs  identity.rs  mod.rs  playback.rs  stats.rs
src/core/: codec.rs  device.rs  error.rs  features.rs  mod.rs  stream.rs
src/crypto/: chacha.rs  hkdf.rs  keys.rs  mod.rs  srp.rs  tlv.rs
src/discovery/: browser.rs  mod.rs  parser.rs  traits.rs
src/pairing/: mod.rs  pair_setup.rs  session.rs
src/rtsp/: connection.rs  mod.rs  plist_codec.rs  request.rs  response.rs  session.rs
src/timing/: clock.rs  mod.rs  ntp.rs  ptp.rs
src/timing/ptp/: flows.rs  messages.rs  tlv.rs  types.rs
src/timing/ptp/flows/: bmca.rs  slave.rs
